[package]
name = "cstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
libc = "0.2.126"
serde = { version = "1.0.141", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
